@@ -49,9 +49,11 @@ sqlite3_config in order to replace memory allocator rather than applying patch t
 source.
 * [master 6e720fd] Fixed up UpdateMunged.py and FXProcess::buildInfo() to use GIT.
 * [master 2af8fdb] Replaced all remaining inlined x86 assembler with GCC intrinsics.
-* [master 067ca0c] Hatched nedmalloc out into its own GIT repo (at long last! And
+* [master 50b7c9d] Hatched nedmalloc out into its own GIT repo (at long last! And
 thanks EVER so much to the git subtree split tool at
 http://github.com/apenwarr/git-subtree/)
++ [master xxxxxxx] Added CLOCK_MONOTONIC based POSIX nanosecond timer support to
+FXProcess::getNsCount().
 
 
 v0.88.1 31st October 2008:
